# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json
backend/: README.md  pyproject.toml
backend/app/: auth.py  chat.py  db.py  main.py  mnda.py
backend/app/documents/: ai_addendum.py  baa.py  common.py  csa.py  design_partner.py  dpa.py  mnda.py  partnership.py  pilot.py  psa.py  registry.py  selection.py  sla.py  software_license.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_db.py  test_document_chat.py  test_history.py  test_mnda_chat.py  test_selection_chat.py  test_static_serving.py
frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.mts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AiDisclaimer.tsx  AppShell.tsx  AuthGate.test.tsx  AuthGate.tsx  DocumentApp.test.tsx  DocumentApp.tsx  DocumentChat.test.tsx  DocumentChat.tsx  DocumentHistoryApp.test.tsx  DocumentHistoryApp.tsx  DocumentHistoryDetail.tsx  DocumentHistoryList.tsx  DocumentPlaceholder.tsx  DocumentPreview.tsx  DownloadPdfButton.tsx  LoginForm.test.tsx  LoginForm.tsx  Logo.tsx  MndaApp.test.tsx  MndaApp.tsx  MndaChat.test.tsx  MndaChat.tsx  MndaDocument.test.tsx  MndaDocument.tsx  MndaForm.test.tsx  MndaForm.tsx  SignupForm.test.tsx  SignupForm.tsx  ThemeToggle.tsx
frontend/e2e/: fixtures.ts  history.spec.ts  login.spec.ts  (+1 more)
scripts/: _start.sh  _stop.sh  start-linux.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
templates/: LICENSE.txt
(+27 files in other folders)
